--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,7 @@
 
 body{
     height: 100vh;
-    background: linear-gradient(120deg, #d83bffd8, #6714ecda);
+    background: linear-gradient(120deg, #a02bbdd8, #6714ecda);
     
     display: flex;
     align-items: center;
@@ -26,6 +26,8 @@ body{
     background: transparent;
     border-radius: 3px;
     box-shadow: 0px 8px 10px rgba(0, 0, 0, .5);
+    user-select: none;
+
 }
 
 .relogio div{
